				IvyDE 
				============================================

  version in svn (not yet released)
===========================
- IMPROVE: enable 'Resolve all' action (IVYDE-42) (thanks to Thomas FRIOL)
- IMPROVE: Support javadoc and sources even in modules where they are not declared (IVYDE-46)
- moved to apache, packages renamed to org.apache.ivyde
  				

  version 1.2.0
===========================
- upgraded to Ivy 1.4.1
- NEW: Link Sources to Classes by Artifact Type in Classpath Container (IVYDE-12) (thanks to Peter Blstak)
- FIX: No resolve messages in console (IVYDE-39)

  version 1.1.0
===========================
- NEW: enabling user to choose what types get added to the classpath (IVYDE-24)
- NEW: Provide [create ivy aware library] when opening the context menu of an ivy.xml file (IVYDE-21)
- NEW: report view (Windows -> Show View -> IvyDE > Report) (IVYDE-20)
- IMPROVE: Deal with cancel resolve job (IVYDE-30)
- IMPROVE: Support for relative path in the prefence fields when declaring location of ivyconf.xml file. (IVYDE-25) (thanks to Peter Chanthamynavong)
- IMPROVE: store per project settings in a shareable file (namely .settings/org.jayasoft.ivyde.eclipse.prefs) (IVYDE-15)
- FIX: junit classpath not resolved correctly with several IvyDE classpath containers (IVYDE-31)

   version 1.0.4 - 
===========================
- remove PDE plugin requirement
- prevent NPE when ivy resolve failed

   version 1.0.3 - 
===========================
- add sources in distrib

   version 1.0.2 - 
===========================
- Include IVY 1.3.1 release
- Fix common-logging classloader issue

   version 1.0.1 - 
===========================
- Include IVY 1.3 release

   version 0.9.8 - 
===========================
- Fix source attachment from class editor

   version 0.9.7 - 
===========================
- Fix source attachment for contained in ivycontainer 

   version 0.9.6 - 
===========================
- Fix startup refresh problem

   version 0.9.3 - 