@@ -5,6 +5,9 @@
 ===========================
 - IMPROVE: enable 'Resolve all' action (IVYDE-42) (thanks to Thomas FRIOL)
 - IMPROVE: Support javadoc and sources even in modules where they are not declared (IVYDE-46)
+
+- FIX: Automatic javadoc attachment is not working (IVYDE-55)
+
 - moved to apache, packages renamed to org.apache.ivyde
   				
 
